# hands-on-CLIP

./: inference.py  pyproject.toml  similarity_visualizer.py
