[project]
name = "hands-on-clip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "torch>=2.7.1",
    "torchmetrics>=1.7.4",
    "torchvision>=0.22.1",
    "transformers>=4.42.4",
    "datasets>=2.20.0",
    "tqdm>=4.66.4",
    "clip>=0.2.0",
]
